--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.1",
     "multer-s3": "^3.0.1",
     "otp-generator": "^4.0.1",
