--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/platform-express": "^10.2.10",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "buffer-to-stream": "^1.0.0",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
@@ -38,7 +40,8 @@
     "multer-s3": "^3.0.1",
     "otp-generator": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
