--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.0.1",
     "multer-s3": "^3.0.1",
     "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1"
