--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.1",
