--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.2.10",
+    "@nestjs/platform-socket.io": "^10.3.1",
+    "@nestjs/websockets": "^10.3.1",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "buffer-to-stream": "^1.0.0",
