--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.2.10",
     "@nestjs/platform-socket.io": "^10.3.1",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/websockets": "^10.3.1",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
